made 2 env devs in package

--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -27,7 +27,8 @@
     "stop": "taskkill -F -IM node.exe",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED='0' next dev",
+    "dev": "($env:REACT_APP_NOT_SECRET_CODE = 'abcdef') -and (next dev)",
+    "macdev": "NODE_TLS_REJECT_UNAUTHORIZED='0' next dev",
     "build": "next build",
     "start": "next start"
   },
