--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -27,7 +27,7 @@
     "stop": "taskkill -F -IM node.exe",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "($env:NODE_TLS_REJECT_UNAUTHORIZED='0') -and (next dev)",
+    "dev": "next dev",
     "macdev": "NODE_TLS_REJECT_UNAUTHORIZED='0' next dev",
     "build": "next build",
     "start": "next start"
