--- a/Abracadabra/abracadabra_admin_panel/package.json
+++ b/Abracadabra/abracadabra_admin_panel/package.json
@@ -12,11 +12,14 @@
     "@babel/preset-env": "^7.12.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "next": "10.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^3.0.0-canary.10",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
     "sass": "^1.29.0"
