--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -30,6 +30,8 @@
   "scripts": {
     "stop": "taskkill -F -IM node.exe",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject",
     "dev": "next dev",
     "macdev": "NODE_TLS_REJECT_UNAUTHORIZED='0' next dev",
