--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -16,6 +16,7 @@
     "babel-jest": "^26.6.1",
     "bootstrap": "^4.5.3",
     "jest": "^26.6.1",
+    "mdbreact": "^4.27.0",
     "newsapi": "^2.4.1",
     "next": "^9.5.5",
     "next-compose-plugins": "^2.2.0",
