--- a/Abracadabra/abracadabra_admin_panel/package.json
+++ b/Abracadabra/abracadabra_admin_panel/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "jwt-decode": "^3.1.2",
     "next": "10.0.1",
     "next-auth": "^3.1.0",
     "next-compose-plugins": "^2.2.1",
@@ -23,7 +24,8 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
-    "sass": "^1.29.0"
+    "sass": "^1.29.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.26.5",
