--- a/Abracadabra/abracadabra_admin_panel/.env
+++ b/Abracadabra/abracadabra_admin_panel/.env
@@ -1,6 +1,5 @@
 # Next auth
 NEXTAUTH_URL=http://localhost:3000
-SITE=http://localhost:3000
 GOOGLE_ID=<YOUR GOOGLE ID>
 GOOGLE_SECRET=<YOUR GOOGLE SECRET>
 FACEBOOK_ID=
@@ -13,4 +12,4 @@ EMAIL_SERVER=smtp://username:password@smtp.example.com:587
 EMAIL_FROM=NextAuth <noreply@example.com>
 DATABASE_URL=sqlite://localhost/:memory:?synchronize=true
 # API
-API_URL=http://localhost:5000 
+NEXT_PUBLIC_API_URL=https://localhost:5001
