--- a/Abracadabra/abracadabra_admin_panel/package.json
+++ b/Abracadabra/abracadabra_admin_panel/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
     "next": "10.0.1",
     "next-auth": "^3.1.0",
