--- a/Abracadabra/abracadabra_admin_panel/package.json
+++ b/Abracadabra/abracadabra_admin_panel/package.json
@@ -16,7 +16,7 @@
     "chartjs-plugin-datalabels": "^0.7.0",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
-    "next": "10.0.1",
+    "next": "^10.0.1",
     "next-auth": "^3.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^3.0.0-canary.10",
