--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "jest": "^26.6.1",
+    "jwt-decode": "^3.1.2",
     "mdbreact": "^4.27.0",
     "moment": "^2.29.1",
     "newsapi": "^2.4.1",
