--- a/Abracadabra/AbracadabraAPI/AbracadabraAPI/AbracadabraAPI.csproj
+++ b/Abracadabra/AbracadabraAPI/AbracadabraAPI/AbracadabraAPI.csproj
@@ -24,6 +24,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
   </ItemGroup>
 
 
