--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -9,26 +9,20 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
-    "babel-jest": "^26.6.1",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
-    "jest": "^26.6.1",
     "jwt-decode": "^3.1.2",
     "mdbreact": "^4.27.0",
     "moment": "^2.29.1",
-    "newsapi": "^2.4.1",
-    "next": "^9.5.5",
+    "next": "^10.0.3",
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^3.0.0-canary.10",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "sass": "^1.27.0"
   },
   "scripts": {
@@ -75,11 +69,11 @@
     ]
   },
   "devDependencies": {
+    "babel-jest": "^26.6.1",
+    "jest": "^26.6.1",
     "@testing-library/dom": "^7.26.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "babel-jest": "^26.6.1",
-    "jest": "^26.6.1",
-    "jest-dom": "^4.0.0"
+    "@testing-library/user-event": "^7.2.1"
   }
 }
