--- a/Abracadabra/abracadabra_admin_panel/package.json
+++ b/Abracadabra/abracadabra_admin_panel/package.json
@@ -33,7 +33,6 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "jest-dom": "^4.0.0"
+    "jest": "^26.6.3"
   }
 }
