--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -78,6 +78,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "babel-jest": "^26.6.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.1",
     "jest-dom": "^4.0.0"
   }
