login seeding, question test

--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -58,15 +58,15 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "../__mocks__/fileMock.js",
+      "\\.(css|less)$": "../__mocks__/styleMock.js"
     },
     "roots": [
-      "<rootDir>",
+      "../",
       "src"
     ],
     "modulePaths": [
-      "<rootDir>",
+      "../",
       "src"
     ],
     "moduleDirectories": [
@@ -79,7 +79,7 @@
     "@testing-library/react": "^9.5.0",
     "babel-jest": "^26.6.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.1",
+    "jest": "^24.6.1",
     "jest-dom": "^4.0.0"
   }
 }
