--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -69,18 +69,10 @@
     ]
   },
   "devDependencies": {
-    "babel-jest": "^26.6.1",
-    "jest": "^26.6.1",
-    "@testing-library/dom": "^7.26.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-<<<<<<< HEAD
-    "babel-jest": "^26.6.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.6.1",
-    "jest-dom": "^4.0.0"
-=======
-    "@testing-library/user-event": "^7.2.1"
->>>>>>> dev
+      "@testing-library/dom": "^7.26.5",
+      "@testing-library/jest-dom": "^5.11.5",
+      "@testing-library/react": "^11.1.1",
+      "babel-jest": "^26.6.3",
+      "jest": "^26.6.3"
   }
 }
