--- a/Abracadabra/abracadabra_web_app/package.json
+++ b/Abracadabra/abracadabra_web_app/package.json
@@ -3,27 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
-    "axios": "^0.20.0",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
-    "mdbreact": "^4.27.0",
-    "moment": "^2.29.1",
-    "next": "^10.0.3",
-    "next-compose-plugins": "^2.2.0",
-    "next-optimized-images": "^3.0.0-canary.10",
-    "react": "^16.14.0",
+    "next": "^10.0.4",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
-    "sass": "^1.27.0"
+    "sass": "^1.32.0"
   },
   "scripts": {
     "stop": "taskkill -F -IM node.exe",
@@ -69,11 +64,11 @@
     ]
   },
   "devDependencies": {
-    "babel-jest": "^26.6.1",
-    "jest": "^26.6.1",
-    "@testing-library/dom": "^7.26.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1"
+    "@testing-library/dom": "^7.29.1",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3"
   }
 }
