updated .env files

--- a/Abracadabra/abracadabra_admin_panel/.env
+++ b/Abracadabra/abracadabra_admin_panel/.env
@@ -1,4 +1,4 @@
-# Next auth
+# Next auth DONT CHANGE THIS. MAKE A .ENV.LOCAL WITH THIS SAME ENTRY AND CHANGE IT THERE
 NEXTAUTH_URL=http://localhost:3001
 GOOGLE_ID=<YOUR GOOGLE ID>
 GOOGLE_SECRET=<YOUR GOOGLE SECRET>
@@ -11,5 +11,5 @@ GITHUB_SECRET=
 EMAIL_SERVER=smtp://username:password@smtp.example.com:587
 EMAIL_FROM=NextAuth <noreply@example.com>
 DATABASE_URL=sqlite://localhost/:memory:?synchronize=true
-# API
-NEXT_PUBLIC_API_URL=https://localhost:44343
+# API DONT CHANGE THIS. MAKE A .ENV.LOCAL WITH THIS SAME ENTRY AND CHANGE IT THERE
+NEXT_PUBLIC_API_URL=https://localhost:5001
